fix card border-color in dark mode

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -43,6 +43,7 @@
 }
 .dark .card-simple {
     background-color: #373636;
+    border-color: #555555;
     }
 .dark .navbar {
     box-shadow: 0 1px 4px rgba(0, 0, 0, 0.04);
